# python-project-50

./: Makefile  README.md  gendiff.py  pyproject.toml
.github/workflows/: ci.yaml
hexlet_code/: __init__.py  gendiff.py
hexlet_code/formatters/: __init__.py  json.py  plain.py  stylish.py
hexlet_code/scripts/: diff_builder.py  gendiff.py  parser.py
hexlet_code/tests/: test_generate_diff.py
