[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
gendiff = "hexlet_code.gendiff:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

# Зависимости разработки
[project.optional-dependencies]
dev = [
    "ruff>=0.15.11",
    "pytest>=9.0.3",
]

# Настройки Ruff
[tool.ruff]
line-length = 79
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "C90"]

[lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]